[package]
name = "multisig_common"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hex = "0.4.3"
bitcoin = { version = "0.31.0", features = ["rand"] }
bs58 = "0.4.0"
candid = "0.9.3"
ic-cdk = "0.10.0"
ic-cdk-macros = "0.7.1"
ripemd = "0.1.1"
serde = "1.0.132"
sha2 = "0.10.2"
secp256k1 = { version = "0.22.2", features = ["rand"] }
